tests/fixtures/invalid/bytes_mod_none.py
# Cannot modulo Bytes and None
x: bytes = b"hello" % None
